--- a/app/.gitignore
+++ b/app/.gitignore
@@ -39,7 +39,9 @@ captures/
 
 # IntelliJ
 *.iml
+.idea/*
 .idea/workspace.xml
+.idea/misc.xml
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/assetWizardSettings.xml
