--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ClientList">
-        <activity
-            android:name=".ui.add.AddClientActivity"
-            android:exported="true" />
+<!--        <activity-->
+<!--            android:name=".ui.add.AddClientActivity"-->
+<!--            android:exported="true" />-->
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true">
