add client flow

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,10 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
 
+    implementation 'com.github.esafirm:android-image-picker:3.0.0-beta1'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.0-beta01'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.3.1'
